# evm-opcode-metrics

./: .env  .gitignore  Cargo.toml  Makefile  README.md  avg-opcode-cycles.csv  filter.py  opcode_table.csv  parser-cycles.py
benches/: bench.rs
scripts/: filter.py  outliers.py  parser-time.py  parser.py  sorter.py
src/: main.rs  opcodes.rs
