[package]
name = "opcodes_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.3"
criterion-cycles-per-byte = "0.6.1"
csv = "1.3.1"
revm = "19.4.0"
revm-interpreter = { version = "15.1.0", features = ["parse"] }

[dev-dependencies]
criterion = "0.3"
# opcodes_analysis = { path = "." } 

[[bench]]
name = "bench"
harness = false
